--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"node": ">=6.9.5"
 	},
 	"license": "MPL-2.0",
+	"main": "src/public/electron.js",
 	"scripts": {
 		"preinstall": "node tools/nodeVersionCheck.js",
 		"start-message": "babel-node tools/startMessage.js",
@@ -23,7 +24,9 @@
 		"test": "karma start karma.conf.js || exit 0",
 		"test:headless": "karma start --browsers ChromeHeadless karma.conf.js || exit 0",
 		"test:watch": "npm run test --watch || exit 0",
-		"analyze-bundle": "babel-node ./tools/analyzeBundle.js"
+		"analyze-bundle": "babel-node ./tools/analyzeBundle.js",
+	    "electron-dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
+	    "electron": "wait-on tcp:3000 && electron ."
 	},
 	"author": "NCSA",
 	"dependencies": {
@@ -79,8 +82,11 @@
 		"babel-plugin-transform-react-remove-prop-types": "0.3.1",
 		"browser-sync": "^2.26.12",
 		"chalk": "1.1.3",
+		"concurrently": "^6.3.0",
 		"connect-history-api-fallback": "1.3.0",
 		"css-loader": "^4.3.0",
+		"electron": "^15.3.0",
+		"electron-is-dev": "^2.0.0",
 		"eslint": "^7.11.0",
 		"eslint-plugin-react": "^7.21.4",
 		"eslint-watch": "^7.0.0",
@@ -100,6 +106,7 @@
 		"style-loader": "^2.0.0",
 		"terser-webpack-plugin": "^2.3.2",
 		"url-loader": "^3.0.0",
+		"wait-on": "^6.0.0",
 		"wallaby-webpack": "^3.9.15",
 		"webpack": "^4.41.5",
 		"webpack-bundle-analyzer": "^3.6.1",
