--- a/.babelrc
+++ b/.babelrc
@@ -51,6 +51,9 @@
 				"@babel/plugin-transform-react-constant-elements",
 				"transform-react-remove-prop-types"
 			]
-		}
+		},
+	  "test": {
+		"plugins": ["@babel/plugin-transform-runtime"]
+	  }
 	}
 }
