--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"babel-loader": "^8.0.0",
 		"babel-plugin-root-import": "^6.4.1",
 		"babel-plugin-transform-react-remove-prop-types": "0.3.1",
+		"better-docs": "^2.3.2",
 		"browser-sync": "^2.26.12",
 		"chalk": "1.1.3",
 		"connect-history-api-fallback": "1.3.0",
@@ -89,6 +90,7 @@
 		"isparta": "^4.1.1",
 		"isparta-loader": "^2.0.0",
 		"jest": "^27.3.1",
+		"jsdoc": "^3.6.7",
 		"json-loader": "^0.5.7",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.14.1",
