Fix Docker build

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,8 +26,8 @@
 	"no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
 	"eqeqeq": ["error", "smart"],
 	"no-eval": "warn",
-    "quotes": ["error", "double"],
-	"indent": ["error", "tab"],
+    "quotes": ["warn", "double"],
+	"indent": ["warn", "tab"],
     "no-console": 1,
     "no-debugger": 1,
     "no-var": "error",
