--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
 		"eslint-plugin-react": "^7.21.4",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-watch": "^7.0.0",
+		"eslint-webpack-plugin": "^3.1.1",
 		"favicons": "^6.2.2",
 		"favicons-webpack-plugin": "^5.0.2",
 		"file-loader": "6.1.1",
