Revert "Datasets V2 CRUD"

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ dist
 # Ignore swap files (for files currently being edited)
 **/*.swp
 
+# Ignore generatediOpenAPI client
+src/openapi/v1/*
+src/openapi/v2/*
