Fix image name in frontend docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
 
   react:
     container_name: "clowder2-react"
-    image: "clowder/clowder-react"
+    image: "hub.ncsa.illinois.edu/clowder/clowder-react"
     build:
       context: .
     ports:
