feat: add openapi github action
fix: remove invalid branch param

fix: fix syntax on repository param

fix: add PAT for debugging

fix: add branch name as ref param

fix: added a sanity check [DEBUG]

fix: added a sanity check [DEBUG]

fix: reorder openapi action steps

fix: reorder openapi action steps

fix: merge github actions into one workflow

fix: fix typo in run env name

Combine codegen and build stages

fix: add env to dokcer-compose up in gh action

fix: pass env into compose up and codegen steps

fix: login to NCSA Hub to pull private image

fix: add some sanity checks [DEBUG]

fix: parameterize api path prefix for codegen

fix: more sanity checks [DEBUG]

fix: more sanity checks [DEBUG]

fix: fix syntax errors, remove bad container section

fix: fix container name

fix: fix bad syntax

fix: nested cloned dirs?

fix: checkout is needed, working dir just seems odd

fix: better wait criteria (no more hardcoded 10s)

fix: typo

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,7 @@ jobs:
   # NODE BUILD
   # ----------------------------------------------------------------------
   build:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
 
     strategy:
@@ -47,10 +48,36 @@ jobs:
       - name: install dependencies
         run: npm install
 
-      # compile UI
-      - name: build
-        run: npm run build
+      - name: Login to NCSA Hub
+        uses: docker/login-action@v1
+        with:
+          registry: hub.ncsa.illinois.edu
+          username: ${{ secrets.HUB_USERNAME }}
+          password: ${{ secrets.HUB_PASSWORD }}
 
+      - name: Start container
+        run: docker run --rm -itd --name=clowder-fastapi -p 80:80 hub.ncsa.illinois.edu/clowder/clowder-fastapi:main
+
+      - name: Wait for FastAPI
+        run: while ! curl --output /dev/null --silent --fail http://localhost:80; do sleep 1 && echo -n .; done;
+  
+      - name: Save temp OpenAPI spec
+        run: docker exec clowder-fastapi curl localhost/api/v2/openapi.json > ./openapi.json
+
+      - name: Generate client from saved spec
+        run: npm run codegen:v2
+        # Trick codegen into using a local file
+        env:
+          CLOWDER_REMOTE_HOST: ' '
+          CLOWDER_PATH_PREFIX: '.'
+
+      - name: Stop container
+        if: always()
+        run: docker rm -f clowder-fastapi
+
+      - name: Run webpack build
+        run: npm build
+  
   # ----------------------------------------------------------------------
   # DOCKER BUILD
   # ----------------------------------------------------------------------
