Attempt to commit+push if changes detected

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,6 +54,9 @@ jobs:
           registry: hub.ncsa.illinois.edu
           username: ${{ secrets.HUB_USERNAME }}
           password: ${{ secrets.HUB_PASSWORD }}
+          
+      #- name: Compute initial hash
+      #  run: echo "OPENAPI_HASH_INIT=$(tar -c . | sha1sum)" >> $GITHUB_ENV
 
       - name: Start container
         run: docker run --rm -itd --name=clowder-fastapi -p 80:80 hub.ncsa.illinois.edu/clowder/clowder-fastapi:main
@@ -74,6 +77,16 @@ jobs:
       - name: Stop container
         if: always()
         run: docker rm -f clowder-fastapi
+        
+      #- name: Compute new hash
+      #  run: echo "OPENAPI_HASH_FINAL=$(tar -c . | sha1sum)" >> $GITHUB_ENV
+        
+      - name: Commit and push if changes detected
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "[AUTO] Regenerate OpenAPI client"
+          file_pattern: src/openapi/v2/*
+          skip_dirty_check: false
 
       - name: Run webpack build
         run: npm build
