--- a/package.json
+++ b/package.json
@@ -31,17 +31,18 @@
 	},
 	"author": "NCSA",
 	"dependencies": {
-		"@material-ui/core": "^4.12.3",
-		"@material-ui/icons": "^4.11.2",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
-		"@mui/material": "^5.2.8",
+		"@material-ui/core": "^4.12.3",
+		"@material-ui/icons": "^4.11.2",
 		"@mui/icons-material": "^5.2.5",
+		"@mui/material": "^5.2.8",
 		"@mui/styles": "^5.3.0",
 		"@rjsf/core": "^3.2.1",
 		"@rjsf/material-ui": "^3.2.1",
 		"babel-polyfill": "^6.26.0",
 		"classnames": "^2.2.6",
+		"date-fns": "^2.28.0",
 		"jquery": "^3.6.0",
 		"jwt-decode": "^3.0.0",
 		"prop-types": "^15.7.2",
