--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"test": "jest --coverage",
 		"test:watch": "npm run test -- --watch",
 		"analyze-bundle": "babel-node ./tools/analyzeBundle.js",
-		"lint": "eslint src",
+		"lint": "eslint src --quiet",
 		"lint:fix": "npm run lint -- --fix",
 		"codegen:v1": "./node_modules/.bin/openapi -i https://clowder.ncsa.illinois.edu/clowder/swagger -o src/openapi/v1",
 		"codegen:v2": "./node_modules/.bin/openapi -i ${CLOWDER_REMOTE_HOSTNAME}/api/v2/openapi.json -o src/openapi/v2",
