--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"start-message": "babel-node tools/startMessage.js",
 		"prestart": "npm-run-all --parallel start-message",
 		"start": "npm-run-all --parallel open:src",
-	  	"start:dev": "export CLOWDER_REMOTE_HOSTNAME=http://localhost:8000 && npm run start",
+		"start:dev": "export CLOWDER_REMOTE_HOSTNAME=http://localhost:8000 && npm run start",
 		"open:src": "babel-node tools/srcServer.js",
 		"open:dist": "babel-node tools/distServer.js",
 		"lint:watch": "npm run lint --watch",
@@ -37,6 +37,7 @@
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
 		"@mui/icons-material": "^5.2.5",
+		"@mui/lab": "^5.0.0-alpha.73",
 		"@mui/material": "^5.2.8",
 		"@mui/styles": "^5.3.0",
 		"@rjsf/core": "^3.2.1",
