--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"date-fns": "^2.28.0",
 		"jquery": "^3.6.0",
 		"jwt-decode": "^3.0.0",
-		"keycloak-js": "^17.0.1",
+		"keycloak-js": "16.1.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
